scroll listview vertical and horizontal

--- a/SnapScrollExamples01/SnapScrollExamples01.Windows/SnapScrollExamples01.Windows.csproj
+++ b/SnapScrollExamples01/SnapScrollExamples01.Windows/SnapScrollExamples01.Windows.csproj
@@ -106,9 +106,11 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ListViewData.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
