--- a/SnapScrollExamples01/SnapScrollExamples01.Windows/SnapScrollExamples01.Windows.csproj
+++ b/SnapScrollExamples01/SnapScrollExamples01.Windows/SnapScrollExamples01.Windows.csproj
@@ -106,6 +106,9 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GridViewData.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="ItemCollection.cs" />
     <Compile Include="ListViewData.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
