--- a/SnapScrollExamples01/SnapScrollExamples01.Windows/SnapScrollExamples01.Windows.csproj
+++ b/SnapScrollExamples01/SnapScrollExamples01.Windows/SnapScrollExamples01.Windows.csproj
@@ -112,6 +112,7 @@
     </Compile>
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SnappingItemsControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
